[package]
name = "bfcomp"
version = "0.1.0"
authors = ["Adam McDaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bfcomp"
path = "src/bin.rs"


[dependencies]
clap = "2.33"
bfcore = "0.2"