[package]
name = "bfcomp"
version = "0.1.0"
authors = ["Adam McDaniel <adam.mcdanie17@gmail.com>"]
edition = "2018"
description = "A compiler for BrainF*ck implemented with AWIB and bfcore"
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/adam-mcdaniel/bfcomp"
repository = "https://github.com/adam-mcdaniel/bfcomp"

[[bin]]
name = "bfcomp"
path = "src/bin.rs"


[dependencies]
clap = "2.33"
bfcore = "0.2.0"